[package]
name = "rsgrad"
description = "an easy to use backpropagation library inspired by micro grad"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
exclude = [
    "notebooks/*",
    "graph.svg",
    ".gitattributes",
    ".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"

